examples/should_fail/index-bad-borrow.anvil
proc top() {
    reg r : logic[4];
    loop {
        let a = 10'd42;
        cycle 1 >>
        let a_select = a[*r+:5];
        set r := 4'd3 >>
        dprint "Value = %d" (a_select)
    }
}
